force-app/main/default/objects/Case_Note__c/Case_Note__c.object-meta.xml
<CustomObject>
    <description>Case Notes and Events that correspond to Case Management.</description>
    <label>Case Note</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Case Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>