force-app/main/default/objects/Case_Note__c/fields/Attorney_Client_Privileged__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Client_Privileged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney-Client Privileged</label>
    <type>Checkbox</type>
</CustomField>