force-app/main/default/objects/Case_Note__c/fields/Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Email__c</fullName>
    <description>Email of the Assigned Deputy on the Case</description>
    <inlineHelpText>Email of the Assigned Deputy on the Case</inlineHelpText>
    <label>Deputy Email</label>
    <type>Email</type>
</CustomField>