force-app/main/default/objects/Case_Note__c/fields/Event_Summary__c.field-meta.xml
<CustomField>
    <fullName>Event_Summary__c</fullName>
    <description>Allows the user to add a descriptive summary in addition to the details of the note. Typically, this field will be tracked in the history</description>
    <inlineHelpText>Add a descriptive summary. If no value is entered, the first 50 characters of the note will be populated here.</inlineHelpText>
    <label>Event Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>