force-app/main/default/objects/Case_Note__c/fields/Legacy_Case_Note_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Note_ID__c</fullName>
    <description>To hold legacy case note ID from Import - for data migration purpose</description>
    <label>Legacy Case Note ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>