force-app/main/default/objects/Case_Note__c/fields/Work_Product_Privileged__c.field-meta.xml
<CustomField>
    <fullName>Work_Product_Privileged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Product Privileged</label>
    <type>Checkbox</type>
</CustomField>