force-app/main/default/objects/Case_Note__c/validationRules/Cannot_Change_Case_Management.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Case_Management</fullName>
    <active>true</active>
    <description>Case Management field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED(Case_Management__c)</errorConditionFormula>
    <errorDisplayField>Case_Management__c</errorDisplayField>
    <errorMessage>The data on this field cannot be changed.</errorMessage>
</ValidationRule>