force-app/main/default/objects/Case_Note__c/validationRules/Cannot_Change_Event_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Event_Note</fullName>
    <active>true</active>
    <description>Event Note field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED( Event_Note__c )</errorConditionFormula>
    <errorDisplayField>Event_Note__c</errorDisplayField>
    <errorMessage>The data on this field cannot be changed.</errorMessage>
</ValidationRule>