force-app/main/default/objects/Case_Note__c/validationRules/Cannot_Change_Event_Summary.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Event_Summary</fullName>
    <active>true</active>
    <description>Event Summary field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED( Event_Summary__c )</errorConditionFormula>
    <errorDisplayField>Event_Summary__c</errorDisplayField>
    <errorMessage>The data on this field cannot be changed.</errorMessage>
</ValidationRule>